# geolocation-rust-sigfox

./: Cargo.toml  README.md  Rocket.toml  data.db
src/: main.rs
templates/: index.html.hbs
