[package]
name = "geolocation"
version = "0.1.0"
authors = ["TimeEngineer <chenpascal241096@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
serde = "1.0"
serde_derive = "1.0"
rusqlite = "0.20.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]